[package]
name = "advent-of-code-2022"
version = "0.1.0"
authors = ["Nicholas L <nicholas-l@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cached = "0.53.1"
itertools = "0.13.0"
nalgebra = "0.33.1"
nom = "7.1.3"
once_cell = "1.20.2"
rayon = "1.10.0"
regex = "1.11.0"
lazy_static = "1.5.0"
# slab = "0.4.3"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "benchmark"
harness = false
