[package]
name = "advent-of-code-2022"
version = "0.1.0"
authors = ["Nicholas L <nicholas-l@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cached = "0.56.0"
itertools = "0.14.0"
nalgebra = "0.33.2"
nom = "8.0.0"
once_cell = "1.21.3"
rayon = "1.10.0"
regex = "1.11.1"
lazy_static = "1.5.0"
# slab = "0.4.3"

[dev-dependencies]
criterion = "0.7"

[[bench]]
name = "benchmark"
harness = false
